[project]
name = "sqlalchemy-triopg"
version = "0.1.0"
description = "A thin Trio-backed wrapper for SQLAlchemy's asyncpg PostgreSQL driver"
authors = [
    {name = "Elias Gabriel",email = "me@eliasfgabriel.com"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.7"
dependencies = [
    "trio-asyncio>=0.12.0",
    "sqlalchemy>=2.0.19",
    "asyncpg>=0.28.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-trio>=0.8.0",
]

[project.entry-points."sqlalchemy.dialects"]
triopg = "sqlalchemy_triopg.triopg:TrioPGDialect"


[tool.pytest.ini_options]
addopts = "-svv"
testpaths = [ "tests" ]
trio_mode = true

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
